# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.22124-r1 (13 Jul 2013)

  13 Jul 2013; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.22124-r1.ebuild:
  Bring ebuild in line with gentoo-x86 version

*portage-2.2.01.22124 (10 Jul 2013)

  10 Jul 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22124.ebuild,
  -portage-2.2.01.22120.ebuild:
  Version bump, matches 2.2.0_alpha188

*portage-2.2.01.22120 (08 Jul 2013)

  08 Jul 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22120.ebuild,
  -portage-2.2.01.22007.ebuild:
  Version bump, matches 2.2.0_alpha187

*portage-2.2.01.22097 (29 Jun 2013)

  29 Jun 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22097.ebuild,
  -portage-2.2.01.21938.ebuild:
  Version bump, matches v2.2.0_alpha186

*portage-2.2.01.22013 (12 Jun 2013)

  12 Jun 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22013.ebuild,
  -portage-2.2.01.21890.ebuild:
  bump for fix for bug #472984

*portage-2.2.01.22007 (09 Jun 2013)

  09 Jun 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22007.ebuild,
  -portage-2.2.01.21882.ebuild:
  Version bump, matches 2.2.0_alpha179

*portage-2.2.01.21938 (05 May 2013)

  05 May 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21938.ebuild,
  -portage-2.2.01.21933.ebuild:
  Bump for Darwin preserve-libs fix

*portage-2.2.01.21933 (05 May 2013)

  05 May 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21933.ebuild,
  -portage-2.2.01.21864.ebuild:
  Version bump, matches 2.2.0_alpha174

*portage-2.2.01.21890 (02 Apr 2013)

  02 Apr 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21890.ebuild,
  -portage-2.2.01.21476.ebuild:
  Version bump, matches v2.2.0_alpha171, fixes bug #460382

*portage-2.2.01.21882 (31 Mar 2013)

  31 Mar 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21882.ebuild,
  -portage-2.2.01.21418.ebuild: